# mcp-h33

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/: anthropic-registry-submission.md  server.json
src/: config.rs  error.rs  lib.rs  main.rs  server.rs
src/cachee/: flu.rs  mod.rs
src/client/: h33_api.rs  mod.rs
src/fraud/: alerts.rs  anomaly.rs  guard.rs  hats.rs  mod.rs  nullifier.rs  responses.rs  risk.rs  transcript.rs
src/protocol/: jsonrpc.rs  messages.rs  mod.rs  stdio.rs
src/token/: cka.rs  mod.rs
src/tools/: biometric.rs  bitcoin.rs  botshield.rs  hics.rs  meta.rs  mod.rs  registry.rs  substrate.rs  tenant.rs  triple_key.rs  zk.rs
tests/: cachee_test.rs  nullifier_test.rs  token_test.rs
