[package]
name = "h33-mcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["H33.ai, Inc. <support@h33.ai>"]
description = "H33 Model Context Protocol server — exposes the H33 post-quantum substrate, biometric auth, ZK proofs, triple-key signing, BotShield, HICS scoring, and HATS governance to MCP-capable AI coding agents (Claude Code, Cursor, Codex, Aider). Native Rust. The canonical MCP surface for H33."
license = "LicenseRef-Proprietary"
homepage = "https://mcp.h33.ai"
repository = "https://github.com/H33ai-postquantum/mcp-h33"
keywords = ["mcp", "h33", "post-quantum", "substrate", "ai-agent"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "h33-mcp"
path = "src/main.rs"

[dependencies]
# Async runtime — same as scif-backend
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync", "time", "signal", "fs", "process"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client — rustls for portable PQ-friendly TLS, no system OpenSSL
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "brotli"], default-features = false }

# Cryptography — same crates as scif-backend
sha3 = "0.10"
hmac = "0.12"
subtle = "2.6"

# In-process concurrent maps — same primitive as the H33 production CacheeFlu
dashmap = "6.1"
parking_lot = "0.12"

# Logging / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# IDs and randomness
uuid = { version = "1.10", features = ["v4", "v7", "fast-rng"] }
rand = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Encoding
base64 = "0.22"
hex = "0.4"

# Time
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# YAML for detection rules parsing
serde_yaml = "0.9"

[dev-dependencies]
tokio = { version = "1.40", features = ["test-util"] }
pretty_assertions = "1.4"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
lto = "fat"
codegen-units = 1
debug = true
